set(CMAKE_SKIP_RPATH TRUE)

if(NOT ANDROID AND CONFIG_BUILD_CONVERT_TOOLS)
	if(NOT CONFIG_CAFFE_SERIALIZER OR NOT CONFIG_ONNX_SERIALIZER OR
	NOT CONFIG_MXNET_SERIALIZER OR NOT CONFIG_TF_SERIALIZER OR
	NOT CONFIG_TFLITE_SERIALIZER OR NOT CONFIG_DARKNET_SERIALIZER)
		message(FATAL_ERROR "please open all serializer")
	endif()
	add_subdirectory(convert_tools)
endif()
